--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,14 @@
 	box-sizing: border-box;
 }
 
+html{
+    font-family: 'Roboto', sans-serif;
+
+}
 
 
 .container-flex{
-    background-color: orange;
+    background-color: rgb(255, 145, 0);
     max-width: 1500px;
     margin:0 auto;
     display: flex;
@@ -46,10 +50,11 @@ body{
 }
 main{
     max-width: 1500px;
+    padding-bottom:30px;
     
 }
 .container-card{
-    background-color: aqua;
+    
     max-width: 900px;
     margin:0 auto;
     display: flex;
@@ -75,12 +80,59 @@ main{
     background-color: white;
     color: black;
     position:absolute;
-    top:20px;
+    top:13px;
     left: 228px;
     padding:2px;
-
-
 }
+
+.heart2{
+    border: 1px solid white;
+    background-color: white;
+    color: black;
+    position:absolute;
+    top:13px;
+    left: 553px;
+    padding:2px;
+}
+.heart3{
+    border: 1px solid white;
+    background-color: white;
+    color: black;
+    position:absolute;
+    top:13px;
+    left: 878px;
+    padding:2px;
+}
+
+.heart4{
+    border: 1px solid white;
+    background-color: white;
+    color: black;
+    position:absolute;
+    top:450px;
+    left: 228px;
+    padding:2px;
+}
+
+.heart5{
+    border: 1px solid white;
+    background-color: white;
+    color: black;
+    position:absolute;
+    top:450px;
+    left: 553px;
+    padding:2px;
+}
+.heart6{
+    border: 1px solid white;
+    background-color: white;
+    color: black;
+    position:absolute;
+    top:450px;
+    left: 878px;
+    padding:2px;
+}
+
 .img-uno{
     width: 250px;
     position: relative;
@@ -143,7 +195,7 @@ main{
 .img-quattroa{
     width: 250px;
     position: absolute;
-    top:445px;
+    top:440px;
     left:0px;
 
 }
@@ -155,7 +207,7 @@ main{
 .img-cinquea{
     width: 250px;
     position: absolute;
-    top:445px;
+    top:440px;
     left:325px;
 
 }
@@ -167,7 +219,7 @@ main{
 .img-seia{
     width: 250px;
     position: absolute;
-    top:445px;
+    top:440px;
     left:650px;
 
 }
@@ -175,3 +227,62 @@ main{
 .img-seia:hover{
     opacity: 0;
 }
+
+.heart:hover{
+    color:red
+}
+
+.heart2:hover{
+    color:red
+}
+.heart3:hover{
+    color:red
+}
+.heart4:hover{
+    color:red
+}
+.heart5:hover{
+    color:red
+}
+.heart6:hover{
+    color:red
+}
+
+.grey{
+    color: grey;
+}
+.red{
+    color:red;
+    font-weight: bolder;
+}
+p .sbarr{
+    text-decoration: line-through;
+    color: black;
+
+}
+.grassetto{
+    font-weight: bolder;
+}
+footer{
+    max-width: 1500px;
+    background-color: black;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+h2{
+    color: white;
+}
+
+.container-footer-flex-1{
+    width: 900px;
+    margin:0 auto;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-flex{
+    display: flex;
+    list-style: none;
+}
+
